# craftinginterpreters

./: CMakeLists.txt  README.md  common.cmake
clox/: CMakeLists.txt  chunk.c  chunk.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
jlox-in-cpp/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  ClockFunction.h  Environment.h  Error.cpp  Error.h  Expr.h  Interpreter.cpp  Interpreter.h  Lox.cpp  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxFunction.h  LoxInstance.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  RuntimeError.h  Scanner.cpp  Scanner.h  Stmt.h  StringValue.h  Token.cpp  Token.h  Value.cpp  Value.h
jlox-in-cpp/test/: CMakeLists.txt  runner
jlox-in-cpp/test/inputs/: inheriting-from-self.parseerror.lox  init-valid-return.norepl.lox  lambda-assignment.lox  lambda-direct-call.parseerror.lox  lambda-expr-stmt.lox  lambda-parenthesized-call.lox  lambda-recursive.lox  missing-function-left-paren.parseerror.lox  missing-lambda-left-paren.parseerror.lox  print-function-name.lox  print-lambda-name.lox  print.lox  this-bound.norepl.lox  var-overwrite.lox
jlox-in-cpp/test/outputs/: bad-super-usage  duplicate-methods  inheriting-from-self  init-valid-return  lambda-direct-call  local-redefinitions  missing-function-left-paren  missing-lambda-left-paren  missing-semicolon  print-lambda-name
jlox-in-rust/: Cargo.toml
jlox-in-rust/src/: ast-printer.rs  ast_printer.rs  error.rs  expr.rs  interpreter.rs  main.rs  parser.rs  scanner.rs  token.rs  token_type.rs  value.rs
test/: CMakeLists.txt  runner
test/jlox-in-cpp/inputs/: class-init.lox  duplicate-methods.parseerror.lox  function-call.lox  global-redefinitions.lox  init-invalid-return.parseerror.lox  local-redefinitions.parseerror.lox  set-and-get.lox  this-outside-class.parseerror.lox
test/jlox-in-cpp/outputs/: init-invalid-return  nonexistent-variable  set-and-get  this-outside-class
